--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -19,11 +19,12 @@ command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
 export PATH="/usr/local/opt/node@16/bin:$PATH"
 export PATH="/usr/local/opt/sphinx-doc/bin:$PATH"
 export PATH="/usr/local/bin/flutter:$PATH"
-export PATH="$PATH:/Users/evanazevedo/Library/Application Support/Coursier/bin"
 export PATH="$PATH:/usr/local/sbin"
 export HOMEBREW_NO_ENV_HINTS="true"
+{{- if eq .chezmoi.hostname "cooper" }}
 export SDKROOT=$(xcrun -sdk macosx --show-sdk-path)
-export ZSH="/Users/evanazevedo/.oh-my-zsh"      # Path to OMZSH
+{{- end }}
+export ZSH="$HOME/.oh-my-zsh"      # Path to OMZSH
 export EDITOR='nvim'                            # Change editor
 export VISUAL='nvim'
 ## NVM
