--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -1,4 +1,8 @@
+{{- if eq .chezmoi.hostname "cooper" }}
+alias update="brew update && brew upgrade"
+{{- else }}
 alias update="sudo apt update && sudo apt upgrade && sudo apt autoremove -y"
+{{- end}}
 alias connectme="tmux new-session -s vpn -d /opt/start_vpn.sh"
 alias disconnectme="tmux kill-session -t vpn"
 alias cdev="cd $HOME/Joby && code Tools/python_containers/python_development_container"
