--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -26,7 +26,6 @@ alias cdev="cd $HOME/Joby && code Tools/python_containers/python_development_con
 alias mts-login='export AWS_PROFILE=di-k8susers && aws sso login'
 alias gconflicts="git diff --name-only --diff-filter=U --relative"
 
-
 # Exports
 export PATH="/Applications/CMake.app/Contents/bin:$PATH" # Add cmake to path
 export PYENV_ROOT="$HOME/.pyenv"
@@ -42,16 +41,22 @@ export SDKROOT=$(xcrun -sdk macosx --show-sdk-path)
 export ZSH="$HOME/.oh-my-zsh"      # Path to OMZSH
 export EDITOR='nvim'                            # Change editor
 export VISUAL='nvim'
+
+# Plugins
+plugins=(git ssh-agent zsh-syntax-highlighting)                         # Plugins
+
+# pyenv-virtualenv
+eval "$(pyenv init -)"
+
+{{- if eq .chezmoi.hostname "lxl-25925m3" }}
+ssh-add $HOME/.ssh/personal_github
+{{- end }}
+
 ## NVM
 export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && . "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 
-# Plugins
-plugins=(git ssh-agent zsh-syntax-highlighting)                         # Plugins
-# pyenv-virtualenv
-eval "$(pyenv init -)"
-source $ZSH/oh-my-zsh.sh
-
-# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
+# Libraries
+[[ ! -f ~/.oh-my-zsh.sh ]] || source $ZSH/oh-my-zsh.sh
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
