--- a/dot_config/zellij/config.kdl.tmpl
+++ b/dot_config/zellij/config.kdl.tmpl
@@ -322,8 +322,11 @@ theme "tokyo-night"
 // Examples:
 //
 // copy_command "xclip -selection clipboard" // x11
-// copy_command "wl-copy"                    // wayland
+{{ if eq .chezmoi.os "darwin" }}
 copy_command "pbcopy"                     // osx
+{{ else }}
+copy_command "wl-copy"                    // wayland
+{{ end }}
 
 // Choose the destination for copied text
 // Allows using the primary selection buffer (on x11/wayland) instead of the system clipboard.
