--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -20,20 +20,17 @@ alias update="brew update && brew upgrade && brew autoremove"
 {{ else }}
 alias update="sudo apt update && sudo apt upgrade && sudo apt autoremove -y"
 {{ end }}
-alias connectme="tmux new-session -s vpn -d /opt/start_vpn.sh"
-alias disconnectme="tmux kill-session -t vpn"
-alias cdev="cd $HOME/Joby && code Tools/python_containers/python_development_container"
-alias mts-login='export AWS_PROFILE=di-k8susers && aws sso login'
 alias gconflicts="git diff --name-only --diff-filter=U --relative"
+alias dmonitors="$HOME/.config/yabai/create_spaces.sh"
 
 # Exports
 export PATH="/Applications/CMake.app/Contents/bin:$PATH" # Add cmake to path
 export PYENV_ROOT="$HOME/.pyenv"
 command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
-export PATH="/usr/local/opt/node@16/bin:$PATH"
 export PATH="/usr/local/opt/sphinx-doc/bin:$PATH"
 export PATH="/usr/local/bin/flutter:$PATH"
 export PATH="$PATH:/usr/local/sbin"
+export PATH="$PATH:$HOME/go/bin"
 export HOMEBREW_NO_ENV_HINTS="true"
 export ZSH="$HOME/.oh-my-zsh"      # Path to OMZSH
 export EDITOR='nvim'                            # Change editor
