--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -10,7 +10,6 @@ fi
 
 fpath=(~/.zshfn "${fpath[@]}")                        # Add functions folder
 autoload -U $fpath[1]/*(.:t)                    # Autoload functions
-zstyle ':omz:update' mode auto      # update automatically without asking
 ZSH_THEME="powerlevel10k/powerlevel10k"                            # Set theme
 DISABLE_UPDATE_PROMPT="true"                    # Auto-update
 
@@ -20,11 +19,8 @@ alias update="brew update && brew upgrade && brew autoremove"
 {{ else }}
 alias update="sudo nixos-rebuild switch"
 {{ end }}
-alias connectme="tmux new-session -s vpn -d /opt/start_vpn.sh"
-alias disconnectme="tmux kill-session -t vpn"
-alias cdev="cd $HOME/Joby && code Tools/python_containers/python_development_container"
-alias mts-login='export AWS_PROFILE=di-k8susers && aws sso login'
 alias gconflicts="git diff --name-only --diff-filter=U --relative"
+alias nedit="sudo nvim /etc/nixos/configuration.nix"
 
 # Exports
 export PATH="/Applications/CMake.app/Contents/bin:$PATH" # Add cmake to path
@@ -35,7 +31,6 @@ export PATH="/usr/local/opt/sphinx-doc/bin:$PATH"
 export PATH="/usr/local/bin/flutter:$PATH"
 export PATH="$PATH:/usr/local/sbin"
 export HOMEBREW_NO_ENV_HINTS="true"
-export ZSH="$HOME/.oh-my-zsh"      # Path to OMZSH
 export EDITOR='nvim'                            # Change editor
 export VISUAL='nvim'
 ## NVM
@@ -43,11 +38,9 @@ export NVM_DIR="$HOME/.nvm"
 [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && . "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 
-# Plugins
-plugins=(git ssh-agent zsh-syntax-highlighting)                         # Plugins
 # pyenv-virtualenv
 eval "$(pyenv init -)"
-source $ZSH/oh-my-zsh.sh
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+
