--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -17,10 +17,10 @@ DISABLE_UPDATE_PROMPT="true"                    # Auto-update
 {{ if eq .chezmoi.os "darwin" }}
 alias update="brew update && brew upgrade && brew autoremove"
 {{ else }}
-alias update="sudo nixos-rebuild switch"
+alias update="sudo nixos-rebuild switch --flake /etc/nixos#default"
 {{ end }}
 alias gconflicts="git diff --name-only --diff-filter=U --relative"
-alias nedit="sudo nvim /etc/nixos/configuration.nix"
+alias nedit="sudo -e /etc/nixos/configuration.nix"
 alias dmonitors="$HOME/.config/yabai/create_spaces.sh"
 
 # Exports
